<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wgh.aiyue.ui.AboutActivity"
    tools:showIn="@layout/activity_about">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/about_text" />

    </android.support.v4.widget.NestedScrollView>

    <io.codetail.widget.RevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/feedback_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryLight"
            android:visibility="invisible">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="45dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/opinion_editext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/opinion_edit_hint" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/link_editext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/link_edit_hint" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/contact_editext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact_edit_hint" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/name_editext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_edit_hint" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/other_editext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/other_edit_hint" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/send_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?attr/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/send_button_text"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="22sp" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </FrameLayout>

    </io.codetail.widget.RevealFrameLayout>

</FrameLayout>