<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="?attr/colorPrimary"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_centerInParent="true"
            android:src="@drawable/head_love" />

        <TextView
            android:id="@+id/authorname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/email"
            android:text="@string/navigation_left_username"
            android:textColor="?attr/colorPrimaryLight"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/navigation_left_mail"
            android:textColor="?attr/colorPrimaryLight"
            android:textSize="13sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_stars_black_48dp" />

        <TextView
            android:id="@+id/text_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/navigation_left_collection"
            android:textSize="20sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_grey_primary_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_loyalty_black_48dp" />

        <TextView
            android:id="@+id/text_subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/navigation_left_subscription"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView_subscription"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:src="@drawable/ic_keyboard_arrow_down" />
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_subscription"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_grey_primary_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_settings_black_48dp" />

        <TextView
            android:id="@+id/text_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/navigation_left_settings"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView_setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:src="@drawable/ic_keyboard_arrow_down" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone"
        android:weightSum="2">

        <TextView
            android:id="@+id/button_theme"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/navigation_left_theme"
            android:textColor="?attr/colorPrimaryLight"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/button_pay"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="?attr/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/navigation_left_pay"
            android:textColor="?attr/colorPrimaryLight"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_grey_primary_light" />

    <LinearLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_face_black_48dp" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/navigation_left_about"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_grey_primary_light" />

</LinearLayout>